--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 {
-  "functions": {
-    "api/php.php": {
-      "runtime": "vercel-php@0.3.1",
-      "excludeFiles": "{test/**}",
-      "memory": 256,
-      "maxDuration": 5
-    }
-  },
-  "routes": [
-    {
-      "src": "/python",
-      "dest": "/api/index"
-    }
-  ]
+    "version": 2,
+    "builds": [
+        { "src": "app.py", "use": "@now/python" }
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "/api/index" }
+    ]
 }
