--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "version": 2,
     "builds": [
-        { "src": "app.py", "use": "@now/python" }
+        { "src": "./index.py", "use": "@vercel/python" }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "/api/index" }
+        { "src": "/(.*)", "dest": "/" }
     ]
 }
